changes added by tejaswini

--- a/src/app/_metronic/partials/content/widgets/mixed/mixed-widget7/mixed-widget7.component.html
+++ b/src/app/_metronic/partials/content/widgets/mixed/mixed-widget7/mixed-widget7.component.html
@@ -181,13 +181,13 @@ table.table-bordered > tbody > tr > td{
                     <table class="child-table">
                         <thead >
                             <tr>
-                                <th class="table-head">Sr.No</th>
-                                <th class="table-head">Date</th>
-                                <th class="table-head">Description</th>
-                                <th class="table-head">Vehicle No.</th>
-                                <th class="table-head">Product|Price</th>
-                                <th class="table-head">Quantity</th>
-                                <th class="table-head">Purchase</th>
+                                <th class="table-head"><b>Sr.No</b></th>
+                                <th class="table-head"><b>Date</b></th>
+                                <th class="table-head"><b>Description</b></th>
+                                <th class="table-head"><b>Vehicle No.</b></th>
+                                <th class="table-head"><b>Product|Price</b></th>
+                                <th class="table-head"><b>Quantity</b></th>
+                                <th class="table-head"><b>Purchase</b></th>
                             
                             </tr>
                         </thead>
@@ -463,7 +463,7 @@ table.table-bordered > tbody > tr > td{
               </div>
             </div>
             <div class="py-2 mt-3">
-              <h3 class="font-size-15 fw-bold">Order summary</h3>
+              <h3 class="font-size-15 fw-bold">Order Summary</h3>
             </div>
 
             <div class="table-responsive">
@@ -471,14 +471,14 @@ table.table-bordered > tbody > tr > td{
                 <thead>
                   <tr>
                     
-                    <th>Sr.No</th>
-                    <th>Date</th>
-                    <th>Bill </th>
-                    <th>details</th>
-                    <th>Product</th>
-                    <th>Product Price</th>
-                    <th>Quantity</th>
-                    <th>Amount</th>
+                    <th><b>Sr.No</b></th>
+                    <th><b>Date</b></th>
+                    <th><b>Bill </b></th>
+                    <th><b>details</b></th>
+                    <th><b>Product</b></th>
+                    <th><b>Product Price</b></th>
+                    <th><b>Quantity</b></th>
+                    <th><b>Amount</b></th>
 
                   </tr>
                 </thead>
@@ -581,7 +581,7 @@ table.table-bordered > tbody > tr > td{
             </div>
 
             <div class="py-2 mt-3">
-                <h3 class="font-size-15 fw-bold">Product summary</h3>
+                <h3 class="font-size-15 fw-bold">Product Summary</h3>
               </div>
               <div class="row">
                   <div class="col-md-6">
@@ -592,9 +592,9 @@ table.table-bordered > tbody > tr > td{
                   <thead>
                     <tr>
                       
-                      <th>Product</th>
-                      <th>Quantity</th>
-                      <th>Amount</th>  
+                      <th><b>Product</b></th>
+                      <th><b>Quantity</b></th>
+                      <th><b>Amount</b></th>  
                     </tr>
                   </thead>
                   <tbody *ngFor="let data of productDetails">
@@ -623,7 +623,7 @@ table.table-bordered > tbody > tr > td{
             </div>
         </div>
         <div class="py-2 mt-3">
-            <h3 class="font-size-15 fw-bold">Lubricant summary</h3>
+            <h3 class="font-size-15 fw-bold">Lubricant Summary</h3>
           </div>
           <div class="row">
               <div class="col-md-6">
@@ -634,9 +634,9 @@ table.table-bordered > tbody > tr > td{
               <thead>
                 <tr>
                   
-                  <th>Lube</th>
-                  <th>Quantity</th>
-                  <th>Amount</th>  
+                  <th><b>Lube</b></th>
+                  <th><b>Quantity</b></th>
+                  <th><b>Amount</b></th>  
                 </tr>
               </thead>
               <tbody *ngFor="let data of lubeDetails">
@@ -657,10 +657,10 @@ table.table-bordered > tbody > tr > td{
     </div>
 
         <div class="py-2 mt-3">
-            <h3 class="font-size-15 fw-bold">Account summary</h3>
+            <h3 class="font-size-15 fw-bold">Account Summary</h3>
           </div>
 
-          <div class="table-responsive mb-0">
+          <div class="table-responsive mb-0" style="width: 90%;">
             <table class="table table-centered table-nowrap table-bordered">
               <thead class="">
                 <tr>     
