--- a/src/app/_metronic/partials/content/widgets/mixed/mixed-widget8/mixed-widget8.component.html
+++ b/src/app/_metronic/partials/content/widgets/mixed/mixed-widget8/mixed-widget8.component.html
@@ -174,13 +174,13 @@
                   <table class="child-table">
                     <thead>
                       <tr>
-                        <th class="table-head">Sr.No</th>
-                        <th class="table-head">Date</th>
-                        <th class="table-head">Description</th>
-                        <th class="table-head">Vehicle No.</th>
-                        <th class="table-head">Product|Price</th>
-                        <th class="table-head">Quantity</th>
-                        <th class="table-head">Purchase</th>
+                        <th class="table-head"><b>Sr.No</b></th>
+                        <th class="table-head"><b>Date</b></th>
+                        <th class="table-head"><b>Description</b></th>
+                        <th class="table-head"><b>Vehicle No.</b></th>
+                        <th class="table-head"><b>Product|Price</b></th>
+                        <th class="table-head"><b>Quantity</b></th>
+                        <th class="table-head"><b>Purchase</b></th>
                       </tr>
                     </thead>
 
@@ -427,20 +427,20 @@
           </div>
         </div>
         <div class="py-2 mt-3">
-          <h3 class="font-size-15 fw-bold">Order summary</h3>
+          <h3 class="font-size-15 fw-bold">Order Summary</h3>
         </div>
         <div class="table-responsive">
           <table class="table">
             <thead>
               <tr>
-                <th>Sr.No</th>
-                <th>Date</th>
-                <th>Bill </th>
-                <th>details</th>
-                <th>Product</th>
-                <th>Product Price</th>
-                <th>Quantity</th>
-                <th>Amount</th>
+                <th><b>Sr.No</b></th>
+                <th><b>Date</b></th>
+                <th><b>Bill </b></th>
+                <th><b>details</b></th>
+                <th><b>Product</b></th>
+                <th><b>Product Price</b></th>
+                <th><b>Quantity</b></th>
+                <th><b>Amount</b></th>
               </tr>
             </thead>
             <tbody>
@@ -533,7 +533,7 @@
         </div>
 
         <div class="py-2 mt-3">
-          <h3 class="font-size-15 fw-bold">Product summary</h3>
+          <h3 class="font-size-15 fw-bold">Product Summary</h3>
         </div>
         <div class="row">
           <div class="col-md-6">
@@ -541,9 +541,9 @@
               <table class="table">
                 <thead>
                   <tr>
-                    <th>Product</th>
-                    <th>Quantity</th>
-                    <th>Amount</th>
+                    <th><b>Product</b></th>
+                    <th><b>Quantity</b></th>
+                    <th><b>Amount</b></th>
                   </tr>
                 </thead>
                 <tbody *ngFor="let data of productDetails">
@@ -568,7 +568,7 @@
           </div>
         </div>
         <div class="py-2 mt-3">
-          <h3 class="font-size-15 fw-bold">Lubricant summary</h3>
+          <h3 class="font-size-15 fw-bold">Lubricant Summary</h3>
         </div>
         <div class="row">
           <div class="col-md-6">
@@ -576,9 +576,9 @@
               <table class="table">
                 <thead>
                   <tr>
-                    <th>Lube</th>
-                    <th>Quantity</th>
-                    <th>Amount</th>
+                    <th><b>Lube</b></th>
+                    <th><b>Quantity</b></th>
+                    <th><b>Amount</b></th>
                   </tr>
                 </thead>
                 <tbody *ngFor="let data of lubeDetails">
@@ -599,7 +599,7 @@
         </div>
 
         <div class="py-2 mt-3">
-          <h3 class="font-size-15 fw-bold">Account summary</h3>
+          <h3 class="font-size-15 fw-bold">Account Summary</h3>
         </div>
 
         <div class="table-responsive mb-0">
