changes added by tejaswini

--- a/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget1/base-tables-widget1.component.html
+++ b/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget1/base-tables-widget1.component.html
@@ -802,28 +802,28 @@
                                   <tr>
                                     <td> BILL/REF NO.</td>
                                     <td>&nbsp;&nbsp;:&nbsp;
-                                      <span *ngIf="purposeShow == 'CREDIT'">
+                                      <!-- <span *ngIf="purposeShow == 'CREDIT'"> -->
                                         <span *ngIf="vehicleNumberShow == 'undefined'">
                                           {{manualCrNumberShow}}
                                         </span>
                                         <span *ngIf="vehicleNumberShow != 'undefined'">
                                           {{manualCrNumberShow}}
                                         </span>
-                                      </span>
+                                      <!-- </span> -->
                                     </td>
                                   </tr>
                                   <tr>
                                     <td>VEHICLE NO.</td>
                                     <td>&nbsp;&nbsp;:&nbsp;
 
-                                      <span *ngIf="purposeShow == 'CREDIT'">
+                                      <!-- <span *ngIf="purposeShow == 'CREDIT'"> -->
                                         <span *ngIf="vehicleNumberShow == 'undefined'">
 
                                         </span>
                                         <span *ngIf="vehicleNumberShow != 'undefined'">
                                           {{vehicleNumberShow}}
                                         </span>
-                                      </span>
+                                      <!-- </span> -->
                                     </td>
                                   </tr>
 
@@ -865,7 +865,7 @@
                                   <tr>
                                     <td>QUANTITY</td>
                                     <td>&nbsp;&nbsp;:&nbsp;
-                                      <span *ngIf="purposeShow == 'CREDIT'">
+                                      <!-- <span *ngIf="purposeShow == 'CREDIT'"> -->
                                         <span *ngIf="transactionStatusShow == 'CANCEL'">
                                           CANCELLED
                                         </span>
@@ -883,7 +883,7 @@
                                             PENDING
                                           </span>
                                         </span>
-                                      </span>
+                                      <!-- </span> -->
 
                                     </td>
                                   </tr>
@@ -1650,28 +1650,28 @@
                             <tr>
                               <td> BILL/REF NO.</td>
                               <td>&nbsp;&nbsp;:&nbsp;
-                                <span *ngIf="purposeShow == 'CREDIT'">
+                                <!-- <span *ngIf="purposeShow == 'CREDIT'"> -->
                                   <span *ngIf="vehicleNumberShow == 'undefined'">
                                     {{manualCrNumberShow}}
                                   </span>
                                   <span *ngIf="vehicleNumberShow != 'undefined'">
                                     {{manualCrNumberShow}}
                                   </span>
-                                </span>
+                                <!-- </span> -->
                               </td>
                             </tr>
                             <tr>
                               <td>VEHICLE NO.</td>
                               <td>&nbsp;&nbsp;:&nbsp;
 
-                                <span *ngIf="purposeShow == 'CREDIT'">
+                                <!-- <span *ngIf="purposeShow == 'CREDIT'"> -->
                                   <span *ngIf="vehicleNumberShow == 'undefined'">
 
                                   </span>
                                   <span *ngIf="vehicleNumberShow != 'undefined'">
                                     {{vehicleNumberShow}}
                                   </span>
-                                </span>
+                                <!-- </span> -->
                               </td>
                             </tr>
                           </tbody>
@@ -1710,7 +1710,7 @@
                             <tr>
                               <td>QUANTITY</td>
                               <td>&nbsp;&nbsp;:&nbsp;
-                                <span *ngIf="purposeShow == 'CREDIT'">
+                                <!-- <span *ngIf="purposeShow == 'CREDIT'"> -->
                                   <span *ngIf="transactionStatusShow == 'CANCEL'">
                                     CANCELLED
                                   </span>
@@ -1728,7 +1728,7 @@
                                       PENDING
                                     </span>
                                   </span>
-                                </span>
+                                <!-- </span> -->
 
                               </td>
                             </tr>
