--- a/src/app/_metronic/partials/content/widgets/mixed/mixed-widget3/mixed-widget3.component.html
+++ b/src/app/_metronic/partials/content/widgets/mixed/mixed-widget3/mixed-widget3.component.html
@@ -247,7 +247,7 @@
                   <tr>
                     <td>
                       <span *ngIf="autoManualStatus == 'TRUE'">
-                        <input type="text" class="form-control" placeholder="Bill Number Automation Active" readonly />
+                        <input type="text" class="form-control" placeholder="Bill Number Automation Active" disabled />
                       </span>
                       <span *ngIf="autoManualStatus != 'TRUE'">
                         <input type="text" class="form-control" [(ngModel)]="charges.advanceManualCrAmount"
