--- a/src/app/_metronic/partials/content/widgets/lists/lists-widget1/lists-widget1.component.html
+++ b/src/app/_metronic/partials/content/widgets/lists/lists-widget1/lists-widget1.component.html
@@ -108,7 +108,7 @@
                   <td style="text-align: center; border: 1px solid black;">
                     <span *ngIf="viewCorpFlag.length" class="col-md-1" (click)="viewFlag(viewFlagModel)"
                       style="color:red;cursor:pointer;font-size: x-large;">
-                      <i class="fas fa-exclamation-triangle" aria-hidden="true"></i>
+                      <i class="fas fa-exclamation-triangle" style="color:red;" aria-hidden="true"></i>
                     </span>
                     <span *ngIf="!viewCorpFlag.length" class="col-md-1">
                       None
