--- a/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget14/base-tables-widget14.component.html
+++ b/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget14/base-tables-widget14.component.html
@@ -108,19 +108,19 @@
                 <table class="table">
                   <thead>
                     <tr>
-                      <th style="text-align: left">Inv No.</th>
-                      <th style="text-align: left;">
-                        Gen Date
+                      <th style="text-align: left"><b>Inv No.</b></th>
+                      <th style="text-align: left;"><b>
+                        Gen Date</b>
                       </th>
                       <!-- <th style="text-align: left">Build To </th> -->
-                      <th style="text-align: left;">
-                        Date Range
+                      <th style="text-align: left;"><b>
+                        Date Range</b>
                       </th>
-                      <th style="text-align: left;">Type</th>
-                      <th style="text-align: left">Opening</th>
-                      <th style="text-align: left">Purchase Amount</th>
-                      <th style="text-align: left">Payment Amount</th>
-                      <th style="text-align: left">Payable Amount</th>
+                      <th style="text-align: left;"><b>Type</b></th>
+                      <th style="text-align: left"><b>Opening</b></th>
+                      <th style="text-align: left"><b>Purchase Amount</b></th>
+                      <th style="text-align: left"><b>Payment Amount</b></th>
+                      <th style="text-align: left"><b>Payable Amount</b></th>
                     </tr>
                   </thead>
                   <tbody>
@@ -279,19 +279,19 @@
                 <table class="table">
                   <thead>
                     <tr>
-                      <th style="text-align: left">Inv No.</th>
+                      <th style="text-align: left"><b>Inv No.</b></th>
                       <!-- <th style="text-align: left;">
                                 Gen Date
                             </th> -->
-                      <th style="text-align: left">Build To </th>
-                      <th style="text-align: left;">
-                        Date Range
+                      <th style="text-align: left"><b>Build To </b></th>
+                      <th style="text-align: left;"><b>
+                        Date Range</b>
                       </th>
-                      <th style="text-align: left;">Type</th>
-                      <th style="text-align: left">Opening</th>
-                      <th style="text-align: left">Purchase Amount</th>
-                      <th style="text-align: left">Payment Amount</th>
-                      <th style="text-align: left">Payable Amount</th>
+                      <th style="text-align: left;"><b>Type</b></th>
+                      <th style="text-align: left"><b>Opening</b></th>
+                      <th style="text-align: left"><b>Purchase Amount</b></th>
+                      <th style="text-align: left"><b>Payment Amount</b></th>
+                      <th style="text-align: left"><b>Payable Amount</b></th>
                     </tr>
                   </thead>
                   <tbody>
