--- a/src/app/_metronic/partials/content/widgets/mixed/mixed-widget13/mixed-widget13.component.html
+++ b/src/app/_metronic/partials/content/widgets/mixed/mixed-widget13/mixed-widget13.component.html
@@ -91,7 +91,7 @@
               <td style="text-align: center"> {{ data.productRate }} </td>
               <td style="text-align: center"> {{ data.vehicleNumber }} </td>
               <td style="text-align: center"> {{ data.creditAmount }} </td>
-              <td style="text-align: center"> {{ data.actualCreditQuantity }} </td>
+              <td style="text-align: center"> {{ data.actualCreditQuantity | number:'1.2-2' }} </td>
           </tr>
       </tbody>
   </table>
