--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget30/tables-widget30.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget30/tables-widget30.component.html
@@ -788,7 +788,7 @@
       <div class="row justify-content-center">
         <div class="col-auto">
           <button type="submit" class="btn btn-primary" (click)="addFuelCreditVehicle()">Submit</button>
-        </div>&nbsp;&nbsp;
+        </div>&nbsp;&nbsp;&nbsp;&nbsp;
         <div class="col-md-3">
           <button type="button" class="btn btn-secondary" aria-label="Close" (click)="d('Cross click')">Close</button>
         </div>
