changes added by tejaswini

--- a/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget1/base-tables-widget1.component.html
+++ b/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget1/base-tables-widget1.component.html
@@ -604,7 +604,7 @@
                 <h4 class="modal-title">
                   <strong>
                     &nbsp;&nbsp;&nbsp;
-                    Edit Credit1 </strong>
+                    Edit Credit </strong>
                 </h4>
               </div>
               <div class="modal-body">
@@ -1332,7 +1332,7 @@
                 <h4 class="modal-title">
                   <strong>
                     &nbsp;&nbsp;&nbsp;
-                    Edit Credit2 </strong>
+                    Edit Credit </strong>
                 </h4>
               </div>
               <div class="modal-body">
