--- a/src/app/modules/auth/components/custlogin/custlogin.component.html
+++ b/src/app/modules/auth/components/custlogin/custlogin.component.html
@@ -67,7 +67,7 @@
                   <button class="btn btn-primary" type="submit">Log In</button>
                 </div>
                 <div class="mt-4 text-center">
-                  <a routerLink="/account/reset-password" class="" style="color: blue;"><i
+                  <a routerLink="/auth/forgot-password" class="" style="color: blue;"><i
                       class="mdi mdi-lock mr-1"></i> Forgot
                     your
                     password?</a>
