--- a/src/app/modules/auth/components/forgot-password/forgot-password.component.html
+++ b/src/app/modules/auth/components/forgot-password/forgot-password.component.html
@@ -1,136 +1,148 @@
-<form
-  class="form w-100"
-  novalidate="novalidate"
-  [formGroup]="forgotPasswordForm"
-  (ngSubmit)="submit()"
-  id="kt_login_password_reset_form"
->
-  <!--begin::Heading-->
-  <div class="text-center mb-10">
-    <!--begin::Title-->
-    <h1 class="text-gray-900 fw-bolder mb-3">
-        Forgot Password ?
-    </h1>
-    <!--end::Title-->
+<div class="account-pages my-5 pt-sm-5">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-8 col-lg-6 col-xl-5">
+        <div class="card overflow-hidden">
+          <div class="bg-soft bg-primary">
+            <div class="row">
+              <div class="col-7">
+                <div class="text-primary p-4">
+                  <h5 class="text-primary"> Reset Password</h5>
+                 
+                </div>
+              </div>
+              <div class="col-5 align-self-end">
+                <img src="../../../../assets/images/ProfilepicResetPassword.png" alt="" class="img-fluid">
+              </div>
+            </div>
+          </div>
+          <div class="card-body pt-0">
+            <div>
+              <a routerLink="/">
+                <div class="avatar-md profile-user-wid mb-4">
+                  <span class="avatar-title rounded-circle bg-light">
+                    <img src="../../../../assets/images/wheel.png" alt="" class="rounded-circle" height="34">
+                  </span>
+                </div>
+              </a>
+            </div>
 
-    <!--begin::Link-->
-    <div class="text-gray-500 fw-semibold fs-6">
-        Enter your email to reset your password.
+            <form *ngIf="!ismobileScreen" id="login-form" class="form" action="" method="post">
+              <div type="danger" style="background-color: rgb(249, 131, 131); padding: 10px" *ngIf="error">{{ error }}</div>
+
+            <div type="success" style="background-color: lightgreen; padding: 10px" *ngIf="success"> {{success}}</div>
+
+            <div type="danger" style="background-color: rgb(249, 131, 131); padding: 10px" *ngIf="errormobile">{{ errormsg }}</div>
+
+              <!-- <h3 class="text-center text-info">
+                  <img src="assets/images/wheel.png" width="20%" />
+
+              </h3> -->
+
+              <label>Mobile</label>
+              <div class="form-group">
+                  <input type="Number" placeholder="Mobile Number" class="form-control"
+                      onkeypress="return this.value.length < 10;" oninput="if(this.value.length=10)"
+                      [(ngModel)]="phone" [ngModelOptions]="{standalone: true}">
+              </div>
+              <div class="form-group">
+                
+                  <br>
+                  <div class="text-center text-info">
+                      <input type="submit" name="Get OTP" class="btn btn-primary float-right" value="Reset"
+                          (click)="findPhoneNumber()">
+
+                  </div>
+              </div><br><br>
+
+          </form>
+
+
+          <form *ngIf="isCompareOTP" id="login-form" class="form" action="" method="post">
+            <div type="danger" style="background-color: rgb(249, 131, 131); padding: 10px" *ngIf="error">{{ error }}</div>
+
+            <div type="success" style="background-color: lightgreen; padding: 10px" *ngIf="success"> {{success}}</div>
+
+            <!-- <h4 class="text-center"> reset password </h4> -->
+            <div class="form-group">
+                <!-- <label class="labelMargin">OTP:</label><br> -->
+                <input type="text" placeholder="enter otp" class="form-control" maxlength="4"
+                    [(ngModel)]="otpNumber" [ngModelOptions]="{standalone: true}" />
+
+            </div>
+            <div class="form-group">
+                <!-- <label for="remember-me" class="text-info" routerLink="/login"
+                    style="cursor: pointer;"><span>Back To Login</span> 
+                </label> -->
+                <br>
+                <div class="text-center text-info">
+                    <input type="submit" name="Submit OTP" class="btn btn-primary btn-md" value="Submit OTP"
+                        (click)="compareOTP()">
+
+                </div>
+            </div><br><br>
+
+        </form>
+
+
+        <form *ngIf="isOTP" id="login-form" class="form" action="" method="post">
+          <div type="danger" style="background-color: rgb(249, 131, 131); padding: 10px" *ngIf="error">{{ error }}</div>
+
+            <div type="success" style="background-color: lightgreen; padding: 10px" *ngIf="success"> {{success}}</div>
+
+          <!-- <h3 class="text-center text-info">
+              <img src="assets/images/wheel.png" width="20%" />
+
+          </h3> -->
+
+          <!-- <h4 class="text-center"> reset password </h4> -->
+          <div class="input-group">
+              <!-- <label for="username" >Password</label><br> -->
+              <input  type="Password" [type]="_pwdType" placeholder="Enter New Password" name="username" id="username"
+                  class="form-control" [(ngModel)]="password " [ngModelOptions]="{standalone: true}"
+                  onkeypress="return this.value.length < 12;" oninput="if(this.value.length=8)">
+                  <button class="btn btn-light ms-0" type="button" id="password-addon"><i
+                    class="fa fa-eye" (click) = "toggleShow()"></i></button>
+
+          </div>
+          <br>
+          <div class="input-group">
+              <!-- <label for="password" >Re-Enter Password:</label><br> -->
+              <input  type="password" [type]="_pwdType1" placeholder="re-enter New Password" name="username" id="username"
+                  class="form-control" [(ngModel)]="repeatPassword " [ngModelOptions]="{standalone: true}"
+                  onkeypress="return this.value.length < 12;" oninput="if(this.value.length=8)">
+                  <button class="btn btn-light ms-0" type="button" id="password-addon"><i
+                    class="fa fa-eye" (click) = "toggleShow3()"></i></button>
+
+          </div>
+          <div class="form-group">
+              <!-- <label for="remember-me" class="text-info"><span>Forgot Password ?</span>  -->
+              <!-- </label> -->
+              <br>
+              <div class="text-center text-info">
+                  <input type="submit" name="Submit" class="btn btn-primary btn-md" value="Submit"
+                      (click)="updatePassword()">
+
+              </div>
+          </div><br><br>
+
+      </form>
+
+
+
+          </div> <!-- end card-body-->
+        </div>
+        <!-- end card -->
+        <div class="mt-5 text-center">
+          <p>Remember It ? <a routerLink="/auth/login" class="fw-medium text-primary"> Sign In here</a> </p>
+          <p>Crafted with <i class="mdi mdi-heart text-danger"></i> veelsPlus</p>
+        </div>
+
+      </div> <!-- end col -->
     </div>
-    <!--end::Link-->
+    <!-- end row -->
+  </div>
+  <!-- end container -->
 </div>
-<!--begin::Heading-->
+<!-- end page -->
 
-  <!-- begin::Alert error-->
-  <ng-container *ngIf="errorState === errorStates.HasError">
-    <div class="mb-lg-15 alert alert-danger">
-      <div class="alert-text font-weight-bold">
-        Sorry, looks like there are some errors detected, please try again.
-      </div>
-    </div>
-  </ng-container>
-  <!-- end::Alert error-->
-
-  <ng-container *ngIf="errorState === errorStates.NoError">
-    <div class="mb-10 bg-light-info p-8 rounded">
-      <!--begin::Body-->
-      <div class="text-info">Sent password reset. Please check your email</div>
-      <!--end::Body-->
-    </div>
-  </ng-container>
-
-  <!--begin::Form group-->
-  <div class="fv-row mb-8">
-    <label class="form-label fw-bolder text-gray-900 fs-6">Email</label>
-    <input
-      class="form-control bg-transparent"
-      type="email"
-      formControlName="email"
-      placeholder="Email"
-      name="email"
-      autocomplete="off"
-      [ngClass]="{
-        'is-invalid': forgotPasswordForm.controls['email'].invalid,
-        'is-valid': forgotPasswordForm.controls['email'].valid
-      }"
-    />
-
-    <ng-container
-      [ngTemplateOutlet]="formError"
-      [ngTemplateOutletContext]="{
-        validation: 'required',
-        message: 'Email is required',
-        control: forgotPasswordForm.controls['email']
-      }"
-    ></ng-container>
-    <ng-container
-      [ngTemplateOutlet]="formError"
-      [ngTemplateOutletContext]="{
-        validation: 'email',
-        message: 'Email is invalid',
-        control: forgotPasswordForm.controls['email']
-      }"
-    ></ng-container>
-    <ng-container
-      [ngTemplateOutlet]="formError"
-      [ngTemplateOutletContext]="{
-        validation: 'minLength',
-        message: 'Email should have at least 3 symbols',
-        control: forgotPasswordForm.controls['email']
-      }"
-    ></ng-container>
-    <ng-container
-      [ngTemplateOutlet]="formError"
-      [ngTemplateOutletContext]="{
-        validation: 'maxLength',
-        message: 'Email should have maximum 360 symbols',
-        control: forgotPasswordForm.controls['email']
-      }"
-    ></ng-container>
-  </div>
-  <!--end::Form group-->
-  <!--begin::Form group-->
-  <div class="d-flex flex-wrap justify-content-center pb-lg-0">
-    <button
-      type="submit"
-      id="kt_password_reset_submit"
-      class="btn btn-primary me-4"
-    >
-      <span class="indicator-label">Submit</span>
-      <ng-container *ngIf="isLoading$ | async">
-        <span class="indicator-progress">
-          Please wait...
-          <span
-            class="spinner-border spinner-border-sm align-middle ms-2"
-          ></span>
-        </span>
-      </ng-container>
-    </button>
-    <a
-      routerLink="/auth/login"
-      id="kt_login_password_reset_form_cancel_button"
-      class="btn btn-light"
-    >
-      Cancel
-    </a>
-  </div>
-  <!--end::Form group-->
-</form>
-<!--end::Form-->
-
-<ng-template
-  #formError
-  let-control="control"
-  let-message="message"
-  let-validation="validation"
->
-  <ng-container
-    *ngIf="control.hasError(validation) && (control.dirty || control.touched)"
-  >
-    <div class="fv-plugins-message-container">
-      <div class="fv-help-block">
-        <span role="alert">{{ message }}</span>
-      </div>
-    </div>
-  </ng-container>
-</ng-template>
